# online_photometric_calibration

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  Database.h  GainRobustTracker.cpp  GainRobustTracker.h  JacobianGenerator.h  LICENSE.txt  OptimizationBlock.cpp  OptimizationBlock.h  OptimizedPoint.h  README.md  RapidExposureTimeEstimator.cpp  ResponseModel.h  main.cpp  readme.txt
src/: Database.cpp  Database.h  Feature.h  Frame.h  GainRobustTracker.cpp  GainRobustTracker.h  ImageReader.cpp  ImageReader.h  JacobianGenerator.cpp  JacobianGenerator.h  NonlinearOptimizer.cpp  NonlinearOptimizer.h  OptimizationBlock.cpp  OptimizationBlock.h  OptimizedPoint.h  RapidExposureTimeEstimator.cpp  RapidExposureTimeEstimator.h  ResponseModel.h  StandardIncludes.h  Tracker.cpp  Tracker.h  VignetteModel.cpp  VignetteModel.h  main.cpp
